# core/models/__init__.py
@@ -3,7 +3,9 @@ from .cell import Cell, CellVariable
 from .city import City
 from .country import Country
 from .document import Document, DocumentCity
+from .document import Document, DocumentCity, DocumentKeyword
 from .language import Language
+from .repository import RepositoryCell, RepositoryCellKeyword, RepositoryDocument, RepositoryDocumentCity
 from .variable import Variable
 from .password_reset import PasswordReset
 from .verification import Verification
