# core/views/cell.py
@@ -1,3 +1,7 @@
+import nltk
+
+from django.conf import settings
+
 from rest_framework.decorators import action
 from rest_framework.mixins import RetrieveModelMixin
 from rest_framework.permissions import IsAuthenticated
@@ -5,9 +9,10 @@ from rest_framework.response import Response
 from rest_framework.status import HTTP_200_OK
 from rest_framework.viewsets import GenericViewSet
 
-from ..models import Cell
+from ..models import Cell, RepositoryCell
 from ..permissions import IsVerified
 from ..serializers.cell import CellSerializer, CellVariableSerializer
+from ..serializers.repository import SimilarDocumentSerializer
 
 
 class CellViewSet(RetrieveModelMixin, GenericViewSet):
@@ -17,6 +22,39 @@ class CellViewSet(RetrieveModelMixin, GenericViewSet):
 
     def get_queryset(self):
         return super().get_queryset().filter(document__user=self.request.user)
+
+    @action(methods=('get',), detail=True)
+    def similar(self, request, pk=None):
+        document_cell = self.get_object()
+
+        document_city = document_cell.document.cities.filter(documentcity__primary=True).get()
+
+        cells = RepositoryCell.objects.filter(
+            order=document_cell.order,
+        ).exclude(
+            document__cities__longitude=document_city.longitude,
+            document__cities__latitude=document_city.latitude,
+        ).select_related('document').prefetch_related('keywords')
+
+        top10 = []
+        document_keywords = document_cell.document.keywords.values_list('value', flat=True)
+        for c in cells:
+            keywords = c.keywords.values_list('value', flat=True)
+            similarity = 1 - nltk.jaccard_distance(document_keywords, keywords)
+
+            if similarity >= settings.CORE_CELL_SIMILARITY_THRESHOLD:
+                top10.append((c.document, similarity))
+
+        top10 = sorted(top10, key=lambda x: x[1], reverse=True)[:10]
+        similarities = dict([(d[0].pk, d[1]) for d in top10])
+
+        document_serializer = SimilarDocumentSerializer(
+            [d[0] for d in top10],
+            many=True,
+            context={'similarities': similarities}
+        )
+
+        return Response(data=document_serializer.data, status=HTTP_200_OK)
 
     @action(methods=('get',), detail=True)
     def variables(self, request, pk=None):
